# geoshape-reduce-size

./: .gitignore  RA_2016_AUST_all.geojson  README.md  aus.geojson  config.yaml  convert.py  dissolve.ipynb  dissolve.py  index.sh  pyproject.toml
data/: ILOC_2021_AUST_GDA2020-simple.geojson  RA_2016_AUST-all.geojson  RA_2016_AUST_all.geojson
src/geoshape_reduce_size/: __init__.py  config.py  convert.py  dissolve.py  simplify.py
