[project]
name = "geoshape-reduce-size"
version = "0.1.0"
description = "Reducing the size of a geojson shape file"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
convert = "geoshape_reduce_size.convert:main"
dissolve = "geoshape_reduce_size.dissolve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

